--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,29 @@
 name: CI with Cache
 
-on: [push]  # This means the action will run whenever you push changes to the repository.
+on: [push]  # Trigger on push events
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # This means the job will run on the latest version of Ubuntu.
+    runs-on: ubuntu-latest  # Running on the latest Ubuntu
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3  # This checks out your repository so that GitHub Actions can use it.
+        uses: actions/checkout@v3  # Checkout your code
 
       - name: Cache dependencies
-        uses: actions/cache@v4  # This will cache the dependencies.
+        uses: actions/cache@v4  # Use the actions/cache action to cache dependencies
         with:
           path: |
-            ~/.npm  # Or whatever folder you want to cache (for example, node_modules or .m2 for Maven).
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}  # Create a unique cache key using the OS and a hash of the package-lock.json.
+            ~/.npm  # For example, this caches npm dependencies (adjust based on your setup)
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}  # Unique cache key based on package-lock.json
           restore-keys: |
-            ${{ runner.os }}-node-modules-  # Fallback if the exact cache key isn’t found.
+            ${{ runner.os }}-node-modules-  # Fallback if cache key not found
 
       - name: Install dependencies
-        run: npm install  # This installs the dependencies if they aren't found in the cache.
+        run: npm install  # Install dependencies if not found in cache
 
-      - name: Prime Cache
-        run: echo "Cache hit/miss result: ${{ steps.cache.outputs.cache-hit }}"  # This step will print the result of whether the cache was a hit or miss.
-
+      - name: prime-cache-6c09181  # Correct step name as per the assignment
+        run: echo "Cache hit/miss result: ${{ steps.cache.outputs.cache-hit }}"  # This prints whether the cache was a hit or miss
 
 
 #         #3. Explanation of Steps
